border-radius banner, box-shadow card, color discount

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -66,7 +66,7 @@ $blue-hover: #0b1658;
 $blue-dark-text: #1b0e41;
 $pink-active: #d82f94;
 $pink-hover: #eb0299;
-$emphasis: #d82f94;
+$emphasis: #eb0299;
 //$emphasis: #f71963;
 
 $light: #f4f7fa;
