--- a/sass/product/vtex.product-price.scss
+++ b/sass/product/vtex.product-price.scss
@@ -4,13 +4,13 @@
 .savings {
   &--savingPerc {
     position: absolute;
-    top: 3px;
+    top: 5px;
     right: 1rem;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 600;
     height: 26px;
     width: 54px !important;
-    background-color: $pink-active;
+    background-color: $pink-hover;
     border-radius: 0.2rem;
     color: $white;
     display: flex;
