--- a/sass/product/vtex.store-components.scss
+++ b/sass/product/vtex.store-components.scss
@@ -176,6 +176,14 @@
 .imageElement--landingbannerImperdibili {
   max-height: 370px;
   object-fit: contain;
+
+  @include desktop {
+    border-radius: 40px;
+    margin-top: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+  }
 }
 
 .productBrandNameLink--pdp {
