--- a/react/components/CustomMegaMenu/style.css
+++ b/react/components/CustomMegaMenu/style.css
@@ -227,6 +227,7 @@
   transition: background-color 250ms linear;
   min-width: 100%;
   height: 50px;
+  cursor: pointer;
 }
 
 .title-name {
@@ -308,11 +309,12 @@
   padding: 15px 60px 10px 15px;
 }
 .mega-menu-link {
-  font-size: 14px;
+  font-size: 18px;
   color: #291660;
-  font-weight: 500;
+  font-weight: 600;
   padding: 0 0 0 14px;
 }
+
 .mega-menu-subtitle {
   font-size: 16px;
   color: #111;
@@ -422,6 +424,7 @@
     min-width: 100%;
     height: 50px;
     border-bottom: 1px solid #d8d8d8;
+    cursor: pointer;
   }
 
   .mobile-title-name {
@@ -499,11 +502,10 @@
     padding: 20px 60px 10px 11px;
   }
   .mobile-mega-menu-link {
-    font-size: 14px;
+    font-size: 16px;
     color: #291660;
-    font-weight: 500;
+    font-weight: 600;
     padding: 0 0 0 14px;
-    text-decoration: none;
   }
   .mobile-subcategory-overflow {
     max-height: 100vh;
