--- a/sass/footer/vtex.flex-layout.scss
+++ b/sass/footer/vtex.flex-layout.scss
@@ -143,6 +143,9 @@
         max-width: 58px;
       }
     }
+    @media screen and (min-width: 640px) {
+      flex-wrap: nowrap;
+    }
   }
 
   &--newsletterRow {
@@ -152,16 +155,28 @@
     justify-content: space-between;
     align-items: center;
 
-    @include breakpoint('desktop') {
+    @include breakpoint('mobile') {
+      margin-top: 10px;
+      padding: 40px 40px;
+      justify-content: center;
+    }
+
+    @media screen and (min-width: 640px) and (max-width: 1024px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      row-gap: 30px;
+
       .stretchChildrenWidth {
         width: max-content !important;
       }
     }
 
-    @include breakpoint('mobile') {
-      margin-top: 10px;
-      padding: 40px 40px;
-      justify-content: center;
+    @include breakpoint('desktop') {
+      .stretchChildrenWidth {
+        width: max-content !important;
+      }
     }
   }
 
@@ -190,6 +205,9 @@
     @include breakpoint('mobile') {
       justify-content: center;
       margin-top: 30px;
+    }
+    @media screen and (min-width: 1025px) and (max-width: 1100px) {
+      margin-left: 40px;
     }
   }
 
