--- a/sass/footer/vtex.rich-text.scss
+++ b/sass/footer/vtex.rich-text.scss
@@ -105,10 +105,9 @@
   }
 
   &--newsSubTitle {
-    justify-content: center !important;
     margin: 0;
     font-size: 16px;
-    font-weight: 300;
+    font-weight: 400;
     color: $white;
     line-height: 21px;
     max-width: 316px;
@@ -156,6 +155,21 @@
 
     @include breakpoint('mobile') {
       margin-bottom: 20px;
+    }
+  }
+}
+
+.container {
+  &--newsTitle,
+  &--newsSubTitle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  &--newsSubTitle {
+    @media screen and (min-width: 1025px) {
+      align-items: start;
     }
   }
 }
