--- a/sass/home/vtex.store-components.scss
+++ b/sass/home/vtex.store-components.scss
@@ -51,10 +51,10 @@
     }
   }
 
-  &--mobile-home-categories-showcase {
-    height: auto;
-    width: 47px;
-  }
+  // &--mobile-home-categories-showcase {
+  //   height: auto;
+  //   width: 47px;
+  // }
 
   &--homeBottomSectionBrands {
     border: 1px solid #f2f2f2;
@@ -75,6 +75,12 @@
   }
   &--home-categories-showcase {
     display: flex;
+    width: 100%;
+    height: 100%;
+  }
+  &--mobile-home-categories-showcase {
+    height: 100%;
+    width: 100%;
   }
 }
 .imageElement {
