--- a/sass/home/vtex.store-link.scss
+++ b/sass/home/vtex.store-link.scss
@@ -51,44 +51,54 @@
   }
   &--home-categories-showcase-cta,
   &--categories-showcase-cta {
-    position: relative;
-    width: 100%;
-    top: 0;
-    left: 0;
+    background-color: rgba(255, 255, 255, 0.9);
+    width: 138px;
+    min-height: 50px;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
-    //border-radius: 16px;
-    font-weight: 500;
+    align-items: center;
+    font-weight: 600;
     font-size: 16px;
     text-decoration: none;
     text-align: center;
-    line-height: 20px;
     color: #332c32;
-    margin-top: 6px;
-    //padding: 10px 0 20px;
 
-    &:hover {
-      color: #332c32;
-      font-weight: 700;
-    }
-  }
-  &--home-categories-showcase-cta {
-    margin-top: 25px;
+    margin-bottom: 10px;
+    padding: 8px 15px;
+
+    border-radius: 50px;
   }
 
   &--mobile-home-categories-showcase-cta {
-    text-decoration: none;
-    height: fit-content;
     color: #332c32;
-    font-size: 14px;
-    line-height: 1rem;
+    background-color: white;
+
+    font-weight: 600;
     text-align: center;
-    width: 100%;
+
+    min-height: 4rem;
+    width: 85%;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
-    margin-top: 1rem;
+    align-items: center;
+
+    border-radius: 50px;
+    padding: 10px 25px 10px 25px;
+    margin-bottom: 10px;
+    opacity: 0.92;
+    text-decoration: none;
+  }
+
+  &--categories-showcase-cta-products {
+    font-weight: 600;
+    font-size: 16px;
+    text-decoration: none;
+    text-align: center;
+    color: #332c32;
+    text-decoration: none;
+    // &:hover {
+    //   color: $pink-active;
+    // }
   }
 
   &--home-services-cta {
@@ -145,6 +155,8 @@
     margin-bottom: 20px;
     &:hover {
       text-decoration: underline;
+      opacity: 0.95;
+      transition: ease-in-out 0.2s;
     }
     @media screen and (max-width: 768px) {
       //display: none;
