--- a/sass/product/vtex.product-price.scss
+++ b/sass/product/vtex.product-price.scss
@@ -8,10 +8,10 @@
     right: 1rem;
     font-size: 16px;
     font-weight: 600;
-    height: 26px;
-    width: 54px !important;
+    height: 45px;
+    width: 45px !important;
     background-color: $pink-hover;
-    border-radius: 0.2rem;
+    border-radius: 50%;
     color: $white;
     display: flex;
     align-items: center;
