--- a/sass/product/vtex.store-components.scss
+++ b/sass/product/vtex.store-components.scss
@@ -178,7 +178,7 @@
   object-fit: contain;
 
   @include desktop {
-    border-radius: 40px;
+    border-radius: 25px;
     margin-top: 25px;
     margin-left: auto;
     margin-right: auto;
@@ -374,6 +374,8 @@
 }
 
 .showMoreButton {
+  text-decoration: underline !important;
+
   &--pdp {
     margin: 1.25rem 0;
     padding: 0;
