--- a/sass/search/vtex.flex-layout.scss
+++ b/sass/search/vtex.flex-layout.scss
@@ -78,7 +78,7 @@
 
 .flexRow--title-container {
   max-width: 1310px;
-  margin: 0 auto;
+  margin: 20px auto;
   width: 100%;
   @include mobile {
     padding: 0 16px;
@@ -160,5 +160,24 @@
     margin-top: -38px;
     //margin-top: 5px;
     padding-top: 40px;
+  }
+}
+
+// :global(.vtex-flex-layout-0-x-flexCol--categories-showcase-products) {
+:global(.vtex-slider-layout-0-x-slideChildrenContainer--slider-categories-products) {
+  &:hover {
+    :global(.vtex-store-link-0-x-label--categories-showcase-cta-products) {
+      color: $pink-active;
+    }
+  }
+}
+
+:global(.vtex-slider-layout-0-x-slideChildrenContainer--slider-categories) {
+  :global(.vtex-flex-layout-0-x-flexCol--categories-showcase-products) {
+    &:hover {
+      :global(.vtex-store-link-0-x-label--categories-showcase-cta-products) {
+        color: $pink-active;
+      }
+    }
   }
 }
