--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -37,25 +37,26 @@
   :global(.vtex-search-result-3-x-galleryItem) {
     position: relative;
     height: 335px;
-    padding: 0 5px;
+    padding: 5px;
   }
 
   :global(.vtex-product-summary-2-x-container--summaryComplete) {
-    max-width: 300px;
+    max-width: 335px;
+    transition: all 0.3s ease-in-out;
     //width: 300px;
-    margin: 0 0 30px 0;
-    transition: none;
+    //margin: 0 0 30px 0;
+    //transition: none;
 
-    &:hover {
-      // position: absolute;
-      // left: 0 !important;
-      // top: 0;
-      // z-index: 7;
-      // height: 420px;
-      // background: $white;
-      // transition: all 0.3s ease-in-out;
-      text-decoration: underline;
-    }
+    // &:hover {
+    //   // position: absolute;
+    //   // left: 0 !important;
+    //   // top: 0;
+    //   // z-index: 7;
+    //   // height: 420px;
+    //   // background: $white;
+    //   // transition: all 0.3s ease-in-out;
+    //   //text-decoration: underline;
+    // }
 
     :global(.vtex-product-summary-2-x-productNameContainer) {
       text-align: start;
@@ -105,7 +106,7 @@
 
     :global(.vtex-product-summary-2-x-clearLink--summaryComplete) {
       max-width: 100%; //160
-      padding: 5px !important;
+      padding: 14px 0 !important;
 
       :global(.vtex-flex-layout-0-x-flexCol--summaryInfo) {
         padding: 5px;
@@ -165,6 +166,9 @@
     font-weight: 400;
     color: #332c32;
     line-height: 30px;
+    @media screen and (max-width: 380px) {
+      padding-left: 100px;
+    }
 
     &::after {
       content: ' articoli trovati';
@@ -198,7 +202,7 @@
       border: 1px solid #d8d8d8;
       border-left: none;
       transform: translateY(-1px);
-      z-index: 5;
+      z-index: 4;
     }
   }
 
@@ -476,7 +480,7 @@
   .filterPopupButton {
     padding: 8px 16px;
     //border: 2px solid #e30613;
-    border: 2px solid #f71a63;
+    border: 2px solid $pink-active;
 
     border-radius: 8px;
     height: auto;
@@ -1155,11 +1159,12 @@
 
 .buttonShowMore {
   :global(.vtex-button) {
+    margin-top: 10px;
     padding-left: 1.5rem;
     line-height: 1;
     padding-right: 1.5rem;
     min-height: 2.5rem;
-    min-width: 240px;
+    //min-width: 240px;
     box-sizing: border-box;
   }
 }
