--- a/sass/home/vtex.slider-layout.scss
+++ b/sass/home/vtex.slider-layout.scss
@@ -90,6 +90,10 @@
     }
   }
 
+  &--slider-categories-products {
+    max-width: 140px;
+  }
+
   // &--slider-categories {
   //   @include breakpoint('mobile') {
 
