--- a/react/components/CustomMegaMenu/style.css
+++ b/react/components/CustomMegaMenu/style.css
@@ -350,6 +350,10 @@
   margin-right: 5px;
 }
 
+.mega-menu-title:before:hover {
+  width: 40px;
+}
+
 .mega-menu-items {
   padding: 0 15px 20px;
   max-height: 100vh;
