--- a/sass/header/vtex.sticky-layout.scss
+++ b/sass/header/vtex.sticky-layout.scss
@@ -5,3 +5,9 @@
 .container {
   background-color: $white;
 }
+
+.wrapper {
+  &--sticky-header {
+    box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.15);
+  }
+}
