--- a/sass/home/vtex.flex-layout.scss
+++ b/sass/home/vtex.flex-layout.scss
@@ -2,7 +2,7 @@
 @import '../_variables.scss';
 .flexRow {
   &--home-page-main-slider {
-    @include breakpoint('desktop') {
+    @media screen and (min-width: 1024px) {
       padding-top: 25px;
     }
 
