--- a/sass/header/vtex.store-components.scss
+++ b/sass/header/vtex.store-components.scss
@@ -130,10 +130,11 @@
 .imageElement--header-logo-new {
   width: 11rem;
   //padding-left: 10px;
-  padding-right: 2.2rem;
+  padding-right: 30px;
+  padding-left: 5px;
   padding-top: 3px;
   max-width: none !important;
-  transform: translateX(-0.7em);
+  //transform: translateX(-0.7em);
 
   @media (max-width: 380px) {
     width: 10rem;
