banner seo pages, mobile footer hidden, newsletter text modif

--- a/sass/footer/vtex.flex-layout.scss
+++ b/sass/footer/vtex.flex-layout.scss
@@ -53,6 +53,8 @@
 
   &--newsletterRow {
     background-color: $blue-active;
+    z-index: 5;
+    position: relative;
   }
 
   &--quemSomos-main {
