--- a/sass/footer/vtex.store-footer.scss
+++ b/sass/footer/vtex.store-footer.scss
@@ -1,6 +1,8 @@
 .footerLayout {
   background: #fff;
   border-radius: 16px 16px 0 0;
+  z-index: 5;
+  position: relative;
 }
 
 .footerLayoutSpacer {
