--- a/sass/footer/vtex.rich-text.scss
+++ b/sass/footer/vtex.rich-text.scss
@@ -167,7 +167,7 @@
     align-items: center;
     justify-content: center;
   }
-  &--newsSubTitle {
+  &--newsTitle {
     @media screen and (min-width: 1025px) {
       align-items: start;
     }
