--- a/sass/footer/vtex.flex-layout.scss
+++ b/sass/footer/vtex.flex-layout.scss
@@ -325,14 +325,16 @@
 }
 
 :global(.vtex-reviews-and-ratings-3-x-container) {
-  margin: 0;
+  border: 1px solid #d92f95;
+  border-radius: 25px;
+  padding: 10px;
 }
 
 :global(.vtex-reviews-and-ratings-3-x-inlineContainer) {
   :global(.vtex-reviews-and-ratings-3-x-stars) {
     color: #f5d25c;
     &::before {
-      content: 'Recensioni positive';
+      content: 'Vedi tutte le Recensioni';
       transform: translateY(2px) translateX(104px);
       position: absolute;
       color: #332c32;
