--- a/react/components/PageBrands/style.css
+++ b/react/components/PageBrands/style.css
@@ -203,6 +203,11 @@
   animation: spin 0.8s linear infinite;
 }
 
+.letter-link {
+  font-size: 14px;
+  color: #d82f94;
+}
+
 @keyframes spin {
   from {
     transform: rotate(0deg);
@@ -226,6 +231,18 @@
   .col-lg-3 {
     flex: 0 0 25%;
     max-width: 25%;
+  }
+
+  .letter-link {
+    font-size: 28px;
+    padding: 0 2px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .col-xl-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
   }
 }
 
