--- a/sass/header/vtex.flex-layout.scss
+++ b/sass/header/vtex.flex-layout.scss
@@ -46,6 +46,9 @@
 
       justify-content: space-between;
       padding: 15px 0 0;
+
+      display: flex;
+      align-items: center;
     }
     .flexCol--header-containerIcons {
       display: flex;
