--- a/sass/product/vtex.product-summary.scss
+++ b/sass/product/vtex.product-summary.scss
@@ -176,9 +176,9 @@
   align-items: center;
   justify-content: center;
 
-  @include breakpoint('mobile') {
-    margin-top: 1.5rem;
-  }
+  // @include breakpoint('mobile') {
+  //   margin-top: 1.5rem;
+  // }
 }
 
 .nameWrapper,
@@ -746,10 +746,10 @@
       height: 355px !important;
     }
 
-    box-shadow: 0px 3px 10px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.1);
     &:hover {
       left: 0 !important;
-      box-shadow: 0px 3px 20px 0 rgba(0, 0, 0, 0.2);
+      box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.2);
       opacity: 0.95;
       transition: ease-in-out 0.2s;
     }
