bug se lo compri ora..

--- a/sass/header/vtex.minicart.scss
+++ b/sass/header/vtex.minicart.scss
@@ -125,7 +125,7 @@
         text-transform: none;
         font-size: 16px;
         color: #fff;
-        content: 'VAI AL CHECKOUT';
+        content: 'VAI AL CARRELLO';
       }
     }
     &:hover {
