--- a/sass/home/vtex.slider-layout.scss
+++ b/sass/home/vtex.slider-layout.scss
@@ -35,9 +35,9 @@
       }
     }
   }
-  :global(.vtex-product-summary-2-x-container--summaryComplete) {
-    max-height: 360px;
-  }
+  // :global(.vtex-product-summary-2-x-container--summaryComplete) {
+  //   max-height: 360px;
+  // }
 }
 
 // .sliderLayoutContainer--mobile-home-categories-showcase-slider {
