--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -36,7 +36,7 @@
 
   :global(.vtex-search-result-3-x-galleryItem) {
     position: relative;
-    height: 360px;
+    // height: 360px;
     padding: 5px;
   }
 
