--- a/sass/product/vtex.product-summary.scss
+++ b/sass/product/vtex.product-summary.scss
@@ -745,8 +745,9 @@
     @include mobile {
       height: 355px !important;
     }
-
+    height: auto;
     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.1);
+
     &:hover {
       left: 0 !important;
       box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.2);
